<resources>
    <string name="app_name">RestApi - Get Post Put Delete</string>
    <string name="sarlavha">Sarlavha</string>
    <string name="sana">Sana</string>
    <string name="bajarildi">Bajarildi</string>
    <string name="zarurlik">Zarurlik (shart, foydali, hayot_mamot, tavsiya)</string>
    <string name="oxirgi_muddat">Oxirgi-muddat (2024–01–01)</string>
    <string name="batafsil">Batafsil</string>
    <string name="save">Save</string>
    <string name="true1">True</string>
    <string name="false1">False</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>