<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/edtSarlavha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/edt_style"
        android:hint="@string/sarlavha"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#AFAFAF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtBatafsil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/edt_style"
        android:hint="@string/batafsil"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#AFAFAF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtOxirgiMuddat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/edt_style"
        android:hint="@string/oxirgi_muddat"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#AFAFAF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtZarurlik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/edt_style"
        android:hint="@string/zarurlik"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#AFAFAF"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/edt_style"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bajarildi"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/mySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/edt_style"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="UnusedAttribute" />
</LinearLayout>